修正滚动载入数据在特定情况下没有完整的清空一行数据的问题

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -978,8 +978,8 @@ Body:
   Translation: "正在加载脚本文件: %s[{CL_CLL}]\r"
 - Original: "Loading NPCs...\r"
   Translation: ""
-- Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL2}]\r"
+  Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL2}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在加载地图 (使用 %s 中的地图缓存)...\n"
 - Original: "Loading maps (using GRF files)...\n"
