汉化部分终端提示信息

--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -731,13 +731,13 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n\t此次加载脚本共计耗时 %[{PRIu64}] 毫秒\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线采购的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个待采道具.\n"
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线采购的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个待采物品.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 共有 [{CL_WHITE}]%d[{CL_RESET}] 个 NPC 限购超市记录在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
   Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位挂机的玩家. (离线挂机有 [{CL_WHITE}]%d[{CL_RESET}] 人, 离开模式有 [{CL_WHITE}]%d[{CL_RESET}] 人).\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线摆摊的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售道具.\n"
+  Translation: "已读取 [{CL_WHITE}]%d[{CL_RESET}] 位离线摆摊的玩家, 全服共计 [{CL_WHITE}]%d[{CL_RESET}] 个在售物品.\n"
 - Original: "Done reading %s.\n"
   Translation: "已读取 %s.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -929,7 +929,7 @@ Body:
 - Original: "Item %u (%s) have invalid equipment slot! Making it an etc item.\n"
   Translation: ""
 - Original: "Item %u (%s) is an equipment with no equip-field! Making it an etc item.\n"
-  Translation: ""
+  Translation: "编号为 %u 的物品 (%s) 是一件装备, 但却没有设置穿戴位置! 已将其设为其他物品(IT_ETC).\n"
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head low) is not known.\n"
@@ -1153,7 +1153,7 @@ Body:
 - Original: "Now at: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Occurred in file '[{CL_WHITE}]%s[{CL_RESET}]' on line %d and column %d.\n"
-  Translation: ""
+  Translation: "请检查 '[{CL_WHITE}]%s[{CL_RESET}]' 文件中第 %d 行第 %d 列附近的数据.\n"
 - Original: "Only allowed to save %d (mmo.hpp::MAX_PC_BONUS_SCRIPT) bonus script each player.\n"
   Translation: ""
 - Original: "Open [{CL_WHITE}]README.md[{CL_RESET}] for more information.\n"
@@ -3139,11 +3139,11 @@ Body:
 - Original: "itemdb_parse_dbrow: Buying/Selling [%d/%d] price of item %u (%s) allows Zeny making exploit  through buying/selling at discounted/overcharged prices!\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: Duplicate item name for \"%s\"\n"
-  Translation: ""
+  Translation: "itemdb_parse_dbrow: 出现重复的物品名称(AegisName): \"%s\".\n"
 - Original: "itemdb_parse_dbrow: Invalid id %d in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: Invalid item type %d for item %u. IT_ETC will be used.\n"
-  Translation: ""
+  Translation: "itemdb_parse_dbrow: 无效的物品类型 %d 被设置到编号为 %u 的物品上. 已将其设为其他物品(IT_ETC).\n"
 - Original: "itemdb_parse_dbrow: Item %u (%s) specifies %d slots, but the server only supports up to %d. Using %d slots.\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: No buying/selling price defined for item %u (%s), using 20/10z\n"
@@ -3173,7 +3173,7 @@ Body:
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %d, skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行数据 (位于: \"%s\") 由于包含了无效的物品编号 %d, 已跳过.\n"
+  Translation: "itemdb_read_combos: 第 %d 行数据 (位于: \"%s\") 因包含无效的物品编号 %d 而被跳过.\n"
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
 - Original: "itemdb_read_flag: Invalid item id %u\n"
