--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -731,13 +731,13 @@ Body:
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n\t此次載入指令碼共計耗時 %[{PRIu64}] 毫秒\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' buyingstore autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線採購的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個待採道具.\n"
+  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線採購的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個待採物品.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' entries for '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets from '[{CL_WHITE}]%s[{CL_RESET}]' table.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 共有 [{CL_WHITE}]%d[{CL_RESET}] 個 NPC 限購超市記錄在 '[{CL_WHITE}]%s[{CL_RESET}]' 表中.\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' suspend player records (Offline: '%d', AFK: '%d').\n"
   Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位掛機的玩家. (離線掛機有 [{CL_WHITE}]%d[{CL_RESET}] 人, 離開模式有 [{CL_WHITE}]%d[{CL_RESET}] 人).\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' vending autotraders with '[{CL_WHITE}]%d[{CL_RESET}]' items.\n"
-  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線擺攤的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個在售道具.\n"
+  Translation: "已讀取 [{CL_WHITE}]%d[{CL_RESET}] 位離線擺攤的玩家, 全服共計 [{CL_WHITE}]%d[{CL_RESET}] 個在售物品.\n"
 - Original: "Done reading %s.\n"
   Translation: "已讀取 %s.\n"
 - Original: "Done reading '[{CL_WHITE}]%[{PRIu64}][{CL_RESET}]' entries in '[{CL_WHITE}]%s%s[{CL_RESET}]'[{CL_CLL}]\n"
@@ -929,7 +929,7 @@ Body:
 - Original: "Item %u (%s) have invalid equipment slot! Making it an etc item.\n"
   Translation: ""
 - Original: "Item %u (%s) is an equipment with no equip-field! Making it an etc item.\n"
-  Translation: ""
+  Translation: "編號為 %u 的物品 (%s) 是一件裝備, 但卻沒有設定穿戴位置! 已將其設為其他物品(IT_ETC).\n"
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head low) is not known.\n"
@@ -978,8 +978,8 @@ Body:
   Translation: "正在載入指令碼檔案: %s[{CL_CLL}]\r"
 - Original: "Loading NPCs...\r"
   Translation: ""
-- Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
-  Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [%[{PRIdPTR}]/%[{PRIdPTR}]] entries from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL2}]\r"
+  Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL2}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在載入地圖 (使用 %s 中的地圖快取)...\n"
 - Original: "Loading maps (using GRF files)...\n"
@@ -1153,7 +1153,7 @@ Body:
 - Original: "Now at: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Occurred in file '[{CL_WHITE}]%s[{CL_RESET}]' on line %d and column %d.\n"
-  Translation: ""
+  Translation: "請檢查 '[{CL_WHITE}]%s[{CL_RESET}]' 檔案中第 %d 行第 %d 列附近的資料.\n"
 - Original: "Only allowed to save %d (mmo.hpp::MAX_PC_BONUS_SCRIPT) bonus script each player.\n"
   Translation: ""
 - Original: "Open [{CL_WHITE}]README.md[{CL_RESET}] for more information.\n"
@@ -3139,11 +3139,11 @@ Body:
 - Original: "itemdb_parse_dbrow: Buying/Selling [%d/%d] price of item %u (%s) allows Zeny making exploit  through buying/selling at discounted/overcharged prices!\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: Duplicate item name for \"%s\"\n"
-  Translation: ""
+  Translation: "itemdb_parse_dbrow: 出現重複的物品名稱(AegisName): \"%s\".\n"
 - Original: "itemdb_parse_dbrow: Invalid id %d in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: Invalid item type %d for item %u. IT_ETC will be used.\n"
-  Translation: ""
+  Translation: "itemdb_parse_dbrow: 無效的物品型別 %d 被設定到編號為 %u 的物品上. 已將其設為其他物品(IT_ETC).\n"
 - Original: "itemdb_parse_dbrow: Item %u (%s) specifies %d slots, but the server only supports up to %d. Using %d slots.\n"
   Translation: ""
 - Original: "itemdb_parse_dbrow: No buying/selling price defined for item %u (%s), using 20/10z\n"
@@ -3173,7 +3173,7 @@ Body:
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %d, skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行資料 (位於: \"%s\") 由於包含了無效的物品編號 %d, 已跳過.\n"
+  Translation: "itemdb_read_combos: 第 %d 行資料 (位於: \"%s\") 因包含無效的物品編號 %d 而被跳過.\n"
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
 - Original: "itemdb_read_flag: Invalid item id %u\n"
