--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -468,6 +468,8 @@ Body:
   Translation: ""
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
+- Original: "Buying/Selling [%d/%d] price of %s (%hu) allows Zeny making exploit through buying/selling at discounted/overcharged prices! Defaulting Sell to 1 Zeny.\n"
+  Translation: ""
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
   Translation: "已加载 '[{CL_WHITE}]%s[{CL_RESET}]' 的采购商店, 采购 '[{CL_WHITE}]%d[{CL_RESET}]' 个物品, 位于 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
@@ -784,6 +786,8 @@ Body:
   Translation: "诊断信息: 系统内置页码 = %d | 交互语言 = 0x%04X | 终端输出页码 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已经完成 '[{CL_WHITE}]%d[{CL_RESET}]' 个 NPC 限购超市的数据校验, 若未报错则检测通过.\n"
+- Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已加载 [{CL_WHITE}]%d[{CL_RESET}] 个脚本, 里面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个传送点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个刷怪点\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物已被缓存\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 个魔物未被缓存\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
@@ -810,6 +814,8 @@ Body:
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' groups in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 个分组, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' levels in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' pets in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -843,6 +849,8 @@ Body:
 - Original: "Empty string passed to _vShowMessage().\n"
   Translation: ""
 - Original: "Equip item %s does not exist.\n"
+  Translation: ""
+- Original: "Error found in \"%s\" while attempting to load.\nPress any key to continue.\n"
   Translation: ""
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
@@ -914,9 +922,13 @@ Body:
   Translation: ""
 - Original: "Found account info for %d, requested by %d\n"
   Translation: ""
+- Original: "Found duplicate item Aegis name for %s, skipping.\n"
+  Translation: ""
 - Original: "Found more arguments than necessary. unexpected arg type %s\n"
   Translation: ""
 - Original: "Found sequence '[{CL_WHITE}] :[{CL_RESET}]' on line '[{CL_WHITE}]%u[{CL_RESET}]' in '[{CL_WHITE}]%s[{CL_RESET}]'. This can cause newer clients to crash.\n"
+  Translation: ""
+- Original: "Found the file \"%s\", which can be converted to sql.\nDo you want to convert it now? (Y/N)\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
   Translation: "[{CL_WHITE}][信息][{CL_RESET}]: 发现 CSV 格式的数据文件 \"%s\" 需要被迁移到 yml 格式.\n[{CL_CYAN}][选择][{CL_RESET}]: 请问是否需要对它进行升级转换? (Y/N)\n"
@@ -1026,17 +1038,37 @@ Body:
   Translation: ""
 - Original: "Invalid achievement level %hu (minimum value: 1), skipping.\n"
   Translation: ""
+- Original: "Invalid ammo type %s, defaulting to AMMO_NONE.\n"
+  Translation: ""
 - Original: "Invalid battleground map name %s, skipping.\n"
   Translation: ""
 - Original: "Invalid channel type %s at '%s' line '%d'! Skipping...\n"
+  Translation: ""
+- Original: "Invalid class upper %s, defaulting to All.\n"
   Translation: ""
 - Original: "Invalid client hash (account: %s, sent md5: %s, ip: %s)\n"
   Translation: ""
 - Original: "Invalid element %s, skipping.\n"
   Translation: ""
+- Original: "Invalid equip location %s, defaulting to IT_ETC.\n"
+  Translation: ""
 - Original: "Invalid guild skill name \"%s\", skipping.\n"
   Translation: ""
 - Original: "Invalid header \"Version\" type for %s database.\n"
+  Translation: ""
+- Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
+  Translation: ""
+- Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
+  Translation: ""
+- Original: "Invalid item equip location %s as it's not a Shadow Gear item type, defaulting to IT_ETC.\n"
+  Translation: "穿戴位置 %s 无效, 因为它不是一件影子装备, 已将其设为其他物品(IT_ETC).\n"
+- Original: "Invalid item equip location as it has no equip location, defaulting to IT_ETC.\n"
+  Translation: ""
+- Original: "Invalid item gender %s, defaulting to SEX_BOTH.\n"
+  Translation: ""
+- Original: "Invalid item job %s, defaulting to All.\n"
+  Translation: ""
+- Original: "Invalid item type %s, defaulting to IT_ETC.\n"
   Translation: ""
 - Original: "Invalid menu selection on npc %d:'%s' - got %d, valid range is [%d..%d] (player AID:%d, CID:%d, name:'%s')!\n"
   Translation: ""
@@ -1056,6 +1088,10 @@ Body:
   Translation: ""
 - Original: "Invalid table name!\n"
   Translation: ""
+- Original: "Invalid weapon level %d, defaulting to 0.\n"
+  Translation: ""
+- Original: "Invalid weapon type %s, defaulting to W_FIST.\n"
+  Translation: ""
 - Original: "Inventory has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Ipban connection made.\n"
@@ -1064,10 +1100,6 @@ Body:
   Translation: "物品 %s 不存在于数据库中, 已跳过.\n"
 - Original: "Item %s is not stackable, capping to 1.\n"
   Translation: ""
-- Original: "Item %u (%s) have invalid equipment slot! Making it an etc item.\n"
-  Translation: ""
-- Original: "Item %u (%s) is an equipment with no equip-field! Making it an etc item.\n"
-  Translation: "编号为 %u 的物品 (%s) 是一件装备, 但却没有设置穿戴位置! 已将其设为其他物品(IT_ETC).\n"
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head low) is not known.\n"
@@ -1075,6 +1107,10 @@ Body:
 - Original: "Item ID for view ID %hu (head mid) is not known.\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head top) is not known.\n"
+  Translation: ""
+- Original: "Item attack range %d exceeds AREA_SIZE (%d), capping to AREA_SIZE.\n"
+  Translation: ""
+- Original: "Item defense %d exceeds DEFTYPE_MAX (%d), capping to DEFTYPE_MAX.\n"
   Translation: ""
 - Original: "Item name for item ID %hu (head low) is not known.\n"
   Translation: ""
@@ -1092,7 +1128,19 @@ Body:
   Translation: ""
 - Original: "Item name for item id %u is not known (equipment).\n"
   Translation: ""
+- Original: "Item name for item id %u is not known (item_avail).\n"
+  Translation: ""
 - Original: "Item name for item id %u is not known.\n"
+  Translation: ""
+- Original: "Item no use override level %d exceeds 100, capping to 100.\n"
+  Translation: ""
+- Original: "Item slots %d exceeds MAX_SLOTS (%d), capping to MAX_SLOTS.\n"
+  Translation: ""
+- Original: "Item sub type is not supported for this item type.\n"
+  Translation: ""
+- Original: "Item trade override level %d exceeds 100, capping to 100.\n"
+  Translation: ""
+- Original: "Item type is not a weapon, defaulting to 0.\n"
   Translation: ""
 - Original: "Job %s does not exist.\n"
   Translation: ""
@@ -1214,6 +1262,10 @@ Body:
   Translation: ""
 - Original: "MaxLevel %hu does not meet the bounds of 1~%d.\n"
   Translation: ""
+- Original: "Maximum equip level %d exceeds MAX_LEVEL (%d), capping to MAX_LEVEL.\n"
+  Translation: ""
+- Original: "Maximum equip level %d is less than minimum equip level %d, capping to minimum equip level.\n"
+  Translation: ""
 - Original: "Maximum level %d exceeds MAX_LEVEL, capping to %d.\n"
   Translation: ""
 - Original: "Maximum players %d cannot be less than 1, capping to 1.\n"
@@ -1266,6 +1318,8 @@ Body:
   Translation: "编号为 #%d 的消息无法从当前的语言类型中被找到 (语言类型: %d).\n"
 - Original: "Messages file not found: %s\n"
   Translation: "无法找到消息数据库文件: %s\n"
+- Original: "Minimum equip level %d exceeds MAX_LEVEL (%d), capping to MAX_LEVEL.\n"
+  Translation: ""
 - Original: "Minimum level %d exceeds MAX_LEVEL, capping to %d.\n"
   Translation: ""
 - Original: "Minimum players %d cannot be less than 1, capping to 1.\n"
@@ -1361,6 +1415,12 @@ Body:
 - Original: "Non-existant item %d on autolootitem list (account_id: %d, char_id: %d)"
   Translation: ""
 - Original: "Non-existant item %d on dropall list (account_id: %d, char_id: %d)\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for UniqueId.\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for buying store.\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for stacking.\n"
   Translation: ""
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
   Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自动检测 IP 地址...\n"
@@ -1701,6 +1761,8 @@ Body:
 - Original: "Type of command: '%s' || Command: '%s' || Map: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Type: '%s'\n"
+  Translation: ""
+- Original: "Unable to change the alias because %s is an unknown item.\n"
   Translation: ""
 - Original: "Unable to determine your IP address...\n"
   Translation: ""
@@ -3450,18 +3512,6 @@ Body:
   Translation: ""
 - Original: "itemdb_get_randgroupitem: No item entries for group id %d and sub group %d\n"
   Translation: ""
-- Original: "itemdb_parse_dbrow: Buying/Selling [%d/%d] price of item %u (%s) allows Zeny making exploit  through buying/selling at discounted/overcharged prices!\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: Duplicate item name for \"%s\"\n"
-  Translation: "itemdb_parse_dbrow: 出现重复的物品名称(AegisName): \"%s\".\n"
-- Original: "itemdb_parse_dbrow: Invalid id %d in line %d of \"%s\", skipping.\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: Invalid item type %d for item %u. IT_ETC will be used.\n"
-  Translation: "itemdb_parse_dbrow: 无效的物品类型 %d 被设置到编号为 %u 的物品上. 已将其设为其他物品(IT_ETC).\n"
-- Original: "itemdb_parse_dbrow: Item %u (%s) specifies %d slots, but the server only supports up to %d. Using %d slots.\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: No buying/selling price defined for item %u (%s), using 20/10z\n"
-  Translation: ""
 - Original: "itemdb_parse_roulette_db: Level %d has %d items, %d are required. Filling with Apples...\n"
   Translation: "itemdb_parse_roulette_db: 大乐透第 %d 层只有 %d 个物品 (至少需要 %d 个), 不足的使用苹果填充...\n"
 - Original: "itemdb_parse_roulette_db: Unknown item ID '%u' in level '%d'\n"
@@ -3474,10 +3524,6 @@ Body:
   Translation: ""
 - Original: "itemdb_pc_get_itemgroup: Invalid group id '%d' specified.\n"
   Translation: ""
-- Original: "itemdb_read_buyingstore: Invalid item id %u.\n"
-  Translation: "itemdb_read_buyingstore: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
-- Original: "itemdb_read_buyingstore: Non-stackable item id %u cannot be enabled for buying store.\n"
-  Translation: ""
 - Original: "itemdb_read_combos(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_combos(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3486,12 +3532,20 @@ Body:
   Translation: ""
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
   Translation: ""
-- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %d, skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行数据 (位于: \"%s\") 因包含无效的物品编号 %d 而被跳过.\n"
+- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %[{PRIu32}], skipping.\n"
+  Translation: ""
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
-- Original: "itemdb_read_flag: Invalid item id %u\n"
-  Translation: "itemdb_read_flag: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
+- Original: "itemdb_read_db: Insufficient columns in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (OnEquip_Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (OnUnequip_Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Mismatching curly braces in line %d (item with id %u), skipping.\n"
+  Translation: ""
 - Original: "itemdb_read_group: Insufficient columns (found %d, need at least 3).\n"
   Translation: ""
 - Original: "itemdb_read_group: Invalid group ID '%s'\n"
@@ -3508,24 +3562,8 @@ Body:
   Translation: ""
 - Original: "itemdb_read_group: Unknown group constant \"%s\".\n"
   Translation: "itemdb_read_group: 无效的分组常量: \"%s\".\n"
-- Original: "itemdb_read_itemavail: Invalid item id %u.\n"
-  Translation: "itemdb_read_itemavail: 无效的物品编号: %u, 请确认是否已定义此物品.\n"
-- Original: "itemdb_read_itemdelay: Invalid delay %d for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemdelay: Invalid item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemdelay: Invalid sc group \"%s\" for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid override GM level %hu for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid trading mask %hu for item id %u.\n"
-  Translation: ""
 - Original: "itemdb_read_noequip: Invalid item id %u.\n"
   Translation: "itemdb_read_noequip: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
-- Original: "itemdb_read_nouse: Invalid item id %u.\n"
-  Translation: "itemdb_read_nouse: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_randomopt(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_randomopt(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3546,22 +3584,6 @@ Body:
   Translation: ""
 - Original: "itemdb_read_randopt: Unknown random option constant \"%s\".\n"
   Translation: "itemdb_read_randopt: 无效的随机属性常量: \"%s\".\n"
-- Original: "itemdb_read_stack: Item id '%u' is not stackable.\n"
-  Translation: ""
-- Original: "itemdb_read_stack: Unknown item id '%u'.\n"
-  Translation: "itemdb_read_stack: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
-- Original: "itemdb_readdb: File not found \"%s\", skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Insufficient columns in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (OnEquip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (OnUnequip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Mismatching curly braces in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
 - Original: "itemdb_search: Item ID %u does not exists in the item_db. Using dummy data.\n"
   Translation: "itemdb_search: 编号为 %u 的物品不存在于数据库中. 使用默认数据进行填充.\n"
 - Original: "load_mapreg: duplicate! '%s' => '%s' skipping...\n"
@@ -4059,6 +4081,18 @@ Body:
 - Original: "parse_fromlogin: Disconnecting invalid session #%d (is not the login-server)\n"
   Translation: ""
 - Original: "parse_frommap: Disconnecting invalid session #%d (is not a map-server)\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: File not found \"%s\", skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Insufficient columns in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (OnEquip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (OnUnequip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Mismatching curly braces in line %d of \"%s\" (item with id %d), skipping.\n"
   Translation: ""
 - Original: "parse_script: function '%s' declared but not defined.\n"
   Translation: ""
