--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -468,6 +468,8 @@ Body:
   Translation: ""
 - Original: "Broken pipe found... closing socket\n"
   Translation: ""
+- Original: "Buying/Selling [%d/%d] price of %s (%hu) allows Zeny making exploit through buying/selling at discounted/overcharged prices! Defaulting Sell to 1 Zeny.\n"
+  Translation: ""
 - Original: "Buyingstore loaded for '[{CL_WHITE}]%s[{CL_RESET}]' with '[{CL_WHITE}]%d[{CL_RESET}]' items at [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
   Translation: "已載入 '[{CL_WHITE}]%s[{CL_RESET}]' 的採購商店, 採購 '[{CL_WHITE}]%d[{CL_RESET}]' 個物品, 位於 [{CL_WHITE}]%s (%d,%d)[{CL_RESET}]\n"
 - Original: "Calibrating Timer Source, please wait... "
@@ -784,6 +786,8 @@ Body:
   Translation: "診斷資訊: 系統內建頁碼 = %d | 互動語言 = 0x%04X | 終端輸出頁碼 = %d\n"
 - Original: "Done checking '[{CL_WHITE}]%d[{CL_RESET}]' NPC Markets.\n"
   Translation: "已經完成 '[{CL_WHITE}]%d[{CL_RESET}]' 個 NPC 限購超市的資料校驗, 若未報錯則檢測通過.\n"
+- Original: "Done converting '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n"
   Translation: "已載入 [{CL_WHITE}]%d[{CL_RESET}] 個指令碼, 裡面包含:[{CL_CLL}]\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個傳送點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個商店\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個 NPC\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個刷怪點\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物已被快取\n\t-  [{CL_WHITE}]%-5d[{CL_RESET}] 個魔物未被快取\n"
 - Original: "Done loading '[{CL_WHITE}]%d[{CL_RESET}]' NPCs:[{CL_CLL}]\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Warps\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Shops\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Scripts\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Spawn sets\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Cached\n\t-'[{CL_WHITE}]%d[{CL_RESET}]' Mobs Not Cached\n\tThis operation took %[{PRIu64}] milliseconds in total\n"
@@ -810,6 +814,8 @@ Body:
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' groups in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 個分組, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' items in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' levels in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' pets in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -843,6 +849,8 @@ Body:
 - Original: "Empty string passed to _vShowMessage().\n"
   Translation: ""
 - Original: "Equip item %s does not exist.\n"
+  Translation: ""
+- Original: "Error found in \"%s\" while attempting to load.\nPress any key to continue.\n"
   Translation: ""
 - Original: "Error syntax of configuration file %s in line %d.\n"
   Translation: ""
@@ -914,9 +922,13 @@ Body:
   Translation: ""
 - Original: "Found account info for %d, requested by %d\n"
   Translation: ""
+- Original: "Found duplicate item Aegis name for %s, skipping.\n"
+  Translation: ""
 - Original: "Found more arguments than necessary. unexpected arg type %s\n"
   Translation: ""
 - Original: "Found sequence '[{CL_WHITE}] :[{CL_RESET}]' on line '[{CL_WHITE}]%u[{CL_RESET}]' in '[{CL_WHITE}]%s[{CL_RESET}]'. This can cause newer clients to crash.\n"
+  Translation: ""
+- Original: "Found the file \"%s\", which can be converted to sql.\nDo you want to convert it now? (Y/N)\n"
   Translation: ""
 - Original: "Found the file \"%s\", which requires migration to yml.\nDo you want to convert it now? (Y/N)\n"
   Translation: "[{CL_WHITE}][資訊][{CL_RESET}]: 發現 CSV 格式的資料檔案 \"%s\" 需要被遷移到 yml 格式.\n[{CL_CYAN}][選擇][{CL_RESET}]: 請問是否需要對它進行升級轉換? (Y/N)\n"
@@ -1026,17 +1038,37 @@ Body:
   Translation: ""
 - Original: "Invalid achievement level %hu (minimum value: 1), skipping.\n"
   Translation: ""
+- Original: "Invalid ammo type %s, defaulting to AMMO_NONE.\n"
+  Translation: ""
 - Original: "Invalid battleground map name %s, skipping.\n"
   Translation: ""
 - Original: "Invalid channel type %s at '%s' line '%d'! Skipping...\n"
+  Translation: ""
+- Original: "Invalid class upper %s, defaulting to All.\n"
   Translation: ""
 - Original: "Invalid client hash (account: %s, sent md5: %s, ip: %s)\n"
   Translation: ""
 - Original: "Invalid element %s, skipping.\n"
   Translation: ""
+- Original: "Invalid equip location %s, defaulting to IT_ETC.\n"
+  Translation: ""
 - Original: "Invalid guild skill name \"%s\", skipping.\n"
   Translation: ""
 - Original: "Invalid header \"Version\" type for %s database.\n"
+  Translation: ""
+- Original: "Invalid item delay status %s, defaulting to SC_NONE.\n"
+  Translation: ""
+- Original: "Invalid item drop effect %s, defaulting to DROPEFFECT_NONE.\n"
+  Translation: ""
+- Original: "Invalid item equip location %s as it's not a Shadow Gear item type, defaulting to IT_ETC.\n"
+  Translation: "穿戴位置 %s 無效, 因為它不是一件影子裝備, 已將其設為其他物品(IT_ETC).\n"
+- Original: "Invalid item equip location as it has no equip location, defaulting to IT_ETC.\n"
+  Translation: ""
+- Original: "Invalid item gender %s, defaulting to SEX_BOTH.\n"
+  Translation: ""
+- Original: "Invalid item job %s, defaulting to All.\n"
+  Translation: ""
+- Original: "Invalid item type %s, defaulting to IT_ETC.\n"
   Translation: ""
 - Original: "Invalid menu selection on npc %d:'%s' - got %d, valid range is [%d..%d] (player AID:%d, CID:%d, name:'%s')!\n"
   Translation: ""
@@ -1056,6 +1088,10 @@ Body:
   Translation: ""
 - Original: "Invalid table name!\n"
   Translation: ""
+- Original: "Invalid weapon level %d, defaulting to 0.\n"
+  Translation: ""
+- Original: "Invalid weapon type %s, defaulting to W_FIST.\n"
+  Translation: ""
 - Original: "Inventory has been saved (AID: %d).\n"
   Translation: ""
 - Original: "Ipban connection made.\n"
@@ -1064,10 +1100,6 @@ Body:
   Translation: "物品 %s 不存在於資料庫中, 已跳過.\n"
 - Original: "Item %s is not stackable, capping to 1.\n"
   Translation: ""
-- Original: "Item %u (%s) have invalid equipment slot! Making it an etc item.\n"
-  Translation: ""
-- Original: "Item %u (%s) is an equipment with no equip-field! Making it an etc item.\n"
-  Translation: "編號為 %u 的物品 (%s) 是一件裝備, 但卻沒有設定穿戴位置! 已將其設為其他物品(IT_ETC).\n"
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head low) is not known.\n"
@@ -1075,6 +1107,10 @@ Body:
 - Original: "Item ID for view ID %hu (head mid) is not known.\n"
   Translation: ""
 - Original: "Item ID for view ID %hu (head top) is not known.\n"
+  Translation: ""
+- Original: "Item attack range %d exceeds AREA_SIZE (%d), capping to AREA_SIZE.\n"
+  Translation: ""
+- Original: "Item defense %d exceeds DEFTYPE_MAX (%d), capping to DEFTYPE_MAX.\n"
   Translation: ""
 - Original: "Item name for item ID %hu (head low) is not known.\n"
   Translation: ""
@@ -1092,7 +1128,19 @@ Body:
   Translation: ""
 - Original: "Item name for item id %u is not known (equipment).\n"
   Translation: ""
+- Original: "Item name for item id %u is not known (item_avail).\n"
+  Translation: ""
 - Original: "Item name for item id %u is not known.\n"
+  Translation: ""
+- Original: "Item no use override level %d exceeds 100, capping to 100.\n"
+  Translation: ""
+- Original: "Item slots %d exceeds MAX_SLOTS (%d), capping to MAX_SLOTS.\n"
+  Translation: ""
+- Original: "Item sub type is not supported for this item type.\n"
+  Translation: ""
+- Original: "Item trade override level %d exceeds 100, capping to 100.\n"
+  Translation: ""
+- Original: "Item type is not a weapon, defaulting to 0.\n"
   Translation: ""
 - Original: "Job %s does not exist.\n"
   Translation: ""
@@ -1214,6 +1262,10 @@ Body:
   Translation: ""
 - Original: "MaxLevel %hu does not meet the bounds of 1~%d.\n"
   Translation: ""
+- Original: "Maximum equip level %d exceeds MAX_LEVEL (%d), capping to MAX_LEVEL.\n"
+  Translation: ""
+- Original: "Maximum equip level %d is less than minimum equip level %d, capping to minimum equip level.\n"
+  Translation: ""
 - Original: "Maximum level %d exceeds MAX_LEVEL, capping to %d.\n"
   Translation: ""
 - Original: "Maximum players %d cannot be less than 1, capping to 1.\n"
@@ -1266,6 +1318,8 @@ Body:
   Translation: "編號為 #%d 的訊息無法從當前的語言型別中被找到 (語言型別: %d).\n"
 - Original: "Messages file not found: %s\n"
   Translation: "無法找到訊息資料庫檔案: %s\n"
+- Original: "Minimum equip level %d exceeds MAX_LEVEL (%d), capping to MAX_LEVEL.\n"
+  Translation: ""
 - Original: "Minimum level %d exceeds MAX_LEVEL, capping to %d.\n"
   Translation: ""
 - Original: "Minimum players %d cannot be less than 1, capping to 1.\n"
@@ -1361,6 +1415,12 @@ Body:
 - Original: "Non-existant item %d on autolootitem list (account_id: %d, char_id: %d)"
   Translation: ""
 - Original: "Non-existant item %d on dropall list (account_id: %d, char_id: %d)\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for UniqueId.\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for buying store.\n"
+  Translation: ""
+- Original: "Non-stackable item cannot be enabled for stacking.\n"
   Translation: ""
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
   Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自動檢測 IP 地址...\n"
@@ -1701,6 +1761,8 @@ Body:
 - Original: "Type of command: '%s' || Command: '%s' || Map: '%s' Coords: %d %d\n"
   Translation: ""
 - Original: "Type: '%s'\n"
+  Translation: ""
+- Original: "Unable to change the alias because %s is an unknown item.\n"
   Translation: ""
 - Original: "Unable to determine your IP address...\n"
   Translation: ""
@@ -3450,18 +3512,6 @@ Body:
   Translation: ""
 - Original: "itemdb_get_randgroupitem: No item entries for group id %d and sub group %d\n"
   Translation: ""
-- Original: "itemdb_parse_dbrow: Buying/Selling [%d/%d] price of item %u (%s) allows Zeny making exploit  through buying/selling at discounted/overcharged prices!\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: Duplicate item name for \"%s\"\n"
-  Translation: "itemdb_parse_dbrow: 出現重複的物品名稱(AegisName): \"%s\".\n"
-- Original: "itemdb_parse_dbrow: Invalid id %d in line %d of \"%s\", skipping.\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: Invalid item type %d for item %u. IT_ETC will be used.\n"
-  Translation: "itemdb_parse_dbrow: 無效的物品型別 %d 被設定到編號為 %u 的物品上. 已將其設為其他物品(IT_ETC).\n"
-- Original: "itemdb_parse_dbrow: Item %u (%s) specifies %d slots, but the server only supports up to %d. Using %d slots.\n"
-  Translation: ""
-- Original: "itemdb_parse_dbrow: No buying/selling price defined for item %u (%s), using 20/10z\n"
-  Translation: ""
 - Original: "itemdb_parse_roulette_db: Level %d has %d items, %d are required. Filling with Apples...\n"
   Translation: "itemdb_parse_roulette_db: 大樂透第 %d 層只有 %d 個物品 (至少需要 %d 個), 不足的使用蘋果填充...\n"
 - Original: "itemdb_parse_roulette_db: Unknown item ID '%u' in level '%d'\n"
@@ -3474,10 +3524,6 @@ Body:
   Translation: ""
 - Original: "itemdb_pc_get_itemgroup: Invalid group id '%d' specified.\n"
   Translation: ""
-- Original: "itemdb_read_buyingstore: Invalid item id %u.\n"
-  Translation: "itemdb_read_buyingstore: 無效的物品編號 %u, 請確認是否已定義此物品.\n"
-- Original: "itemdb_read_buyingstore: Non-stackable item id %u cannot be enabled for buying store.\n"
-  Translation: ""
 - Original: "itemdb_read_combos(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_combos(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3486,12 +3532,20 @@ Body:
   Translation: ""
 - Original: "itemdb_read_combos: Insufficient columns in line %d of \"%s\", skipping.\n"
   Translation: ""
-- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %d, skipping.\n"
-  Translation: "itemdb_read_combos: 第 %d 行資料 (位於: \"%s\") 因包含無效的物品編號 %d 而被跳過.\n"
+- Original: "itemdb_read_combos: line %d of \"%s\" contains unknown item ID %[{PRIu32}], skipping.\n"
+  Translation: ""
 - Original: "itemdb_read_combos: line %d of \"%s\" doesn't have enough items to make for a combo (min:2), skipping.\n"
   Translation: ""
-- Original: "itemdb_read_flag: Invalid item id %u\n"
-  Translation: "itemdb_read_flag: 無效的物品編號 %u, 請確認是否已定義此物品.\n"
+- Original: "itemdb_read_db: Insufficient columns in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (OnEquip_Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (OnUnequip_Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Invalid format (Script column) in line %d (item with id %u), skipping.\n"
+  Translation: ""
+- Original: "itemdb_read_db: Mismatching curly braces in line %d (item with id %u), skipping.\n"
+  Translation: ""
 - Original: "itemdb_read_group: Insufficient columns (found %d, need at least 3).\n"
   Translation: ""
 - Original: "itemdb_read_group: Invalid group ID '%s'\n"
@@ -3508,24 +3562,8 @@ Body:
   Translation: ""
 - Original: "itemdb_read_group: Unknown group constant \"%s\".\n"
   Translation: "itemdb_read_group: 無效的分組常量: \"%s\".\n"
-- Original: "itemdb_read_itemavail: Invalid item id %u.\n"
-  Translation: "itemdb_read_itemavail: 無效的物品編號: %u, 請確認是否已定義此物品.\n"
-- Original: "itemdb_read_itemdelay: Invalid delay %d for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemdelay: Invalid item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemdelay: Invalid sc group \"%s\" for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid override GM level %hu for item id %u.\n"
-  Translation: ""
-- Original: "itemdb_read_itemtrade: Invalid trading mask %hu for item id %u.\n"
-  Translation: ""
 - Original: "itemdb_read_noequip: Invalid item id %u.\n"
   Translation: "itemdb_read_noequip: 無效的物品編號 %u, 請確認是否已定義此物品.\n"
-- Original: "itemdb_read_nouse: Invalid item id %u.\n"
-  Translation: "itemdb_read_nouse: 無效的物品編號 %u, 請確認是否已定義此物品.\n"
 - Original: "itemdb_read_randomopt(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
 - Original: "itemdb_read_randomopt(#2): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -3546,22 +3584,6 @@ Body:
   Translation: ""
 - Original: "itemdb_read_randopt: Unknown random option constant \"%s\".\n"
   Translation: "itemdb_read_randopt: 無效的隨機屬性常量: \"%s\".\n"
-- Original: "itemdb_read_stack: Item id '%u' is not stackable.\n"
-  Translation: ""
-- Original: "itemdb_read_stack: Unknown item id '%u'.\n"
-  Translation: "itemdb_read_stack: 無效的物品編號 %u, 請確認是否已定義此物品.\n"
-- Original: "itemdb_readdb: File not found \"%s\", skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Insufficient columns in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (OnEquip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (OnUnequip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Invalid format (Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
-- Original: "itemdb_readdb: Mismatching curly braces in line %d of \"%s\" (item with id %d), skipping.\n"
-  Translation: ""
 - Original: "itemdb_search: Item ID %u does not exists in the item_db. Using dummy data.\n"
   Translation: "itemdb_search: 編號為 %u 的物品不存在於資料庫中. 使用預設資料進行填充.\n"
 - Original: "load_mapreg: duplicate! '%s' => '%s' skipping...\n"
@@ -4059,6 +4081,18 @@ Body:
 - Original: "parse_fromlogin: Disconnecting invalid session #%d (is not the login-server)\n"
   Translation: ""
 - Original: "parse_frommap: Disconnecting invalid session #%d (is not a map-server)\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: File not found \"%s\", skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Insufficient columns in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (OnEquip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (OnUnequip_Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Invalid format (Script column) in line %d of \"%s\" (item with id %d), skipping.\n"
+  Translation: ""
+- Original: "parse_item_constants_txt: Mismatching curly braces in line %d of \"%s\" (item with id %d), skipping.\n"
   Translation: ""
 - Original: "parse_script: function '%s' declared but not defined.\n"
   Translation: ""
