跟随 6655216, 修正合并 rAthena 提交后导致的功能异常

--- a/conf/inter_athena.conf
+++ b/conf/inter_athena.conf
@@ -201,10 +201,10 @@ guild_storage_log: guild_storage_log
 suspend_table: suspend
 
 // 是否让地图服务器加载 SQL 版本的 item_db, mob_db 及 mob_skill_db? (yes/no)
-// 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.txt、
+// 若改成 yes 的话, 地图服务器将不会再加载 db 目录中的 item_db.yaml、
 // mob_db.txt 及 mob_skill_db.txt, 而是转而加载这些文件在数据库中对应的表.
 // 
-// 将此选项改成 yes 之前, 请先往 map_server_db 选项所指向的数据库导入以下的 SQL 脚本,
+// 将此选项改成 yes 之前, 请先往 map_server_db 选项所指向的主数据库导入以下的 SQL 脚本,
 // 否则 map-server 将找不到物品和魔物等数据:
 // 
 // 无论你使用的是复兴前还是复兴后的版本, 
@@ -217,8 +217,9 @@ suspend_table: suspend
 // 请按顺序导入 sql-files\main\creation\use_sql_db\pre-renewal 目录中的全部文件
 // 
 // 导入之后也就意味着 item_db 等信息都已经被搬入到 MySQL 数据库中了, 
-// 以后您想再修改 item_db 等信息时, 将不再是修改 db\[pre-]re\item_db.txt 文件了
+// 以后您想再修改 item_db 等信息时, 将不再是修改 db\[pre-]re\item_db.yaml 文件了
 // 而是去 MySQL 数据库中直接更新对应的表.
+// 
 // 提示: 魔物数据库 mob_db 和魔物技能数据库 mob_skill_db 同理
 use_sql_db: no
 
