--- a/conf/msg_conf/map_msg_chs.conf
+++ b/conf/msg_conf/map_msg_chs.conf
@@ -754,7 +754,7 @@
 716: 您的 '%s' 余额为: %d
 
 // MVP EXP reward message
-717: 恭喜您杀死了强大的魔物! 成为了荣耀的 MVP! 您的奖励经验为 %u !!
+717: 恭喜您杀死了强大的魔物! 成为了荣耀的 MVP! 您的奖励经验为 %llu !!
 
 // @showrate
 718: Personal rate information is not displayed now.
@@ -1335,7 +1335,7 @@
 1244: 　- 攻击:%d~%d  范围:%d~%d~%d  体型:%s  种族:%s  属性:%s (Lv:%d)
 1245: 掉落道具:
 1246: 此魔物不掉落道具.
-1247: MVP 经验加成: %u
+1247: MVP 经验加成: %llu
 1248: MVP 奖励道具:
 1249: 此魔物不掉落MVP奖励道具.
 
