实现疾风缓存机制, 大幅提高缓存后的程序启动速度 (当前支持: 物品, 任务, 技能数据库)
Signed-off-by: CairoLee <cairoliyu@gmail.com>

--- a/conf/msg_conf/translation_tw.yml
+++ b/conf/msg_conf/translation_tw.yml
@@ -826,6 +826,8 @@ Body:
   Translation: "已讀取 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%u[{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已讀取 [{CL_WHITE}]%-5u[{CL_RESET}] 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading [{CL_WHITE}]%s[{CL_RESET}] from blast cache, took %[{PRIu64}] milliseconds...\n"
+  Translation: "已讀取 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取 (耗時 %[{PRIu64}] 毫秒)...\n"
 - Original: "Done reading [{CL_WHITE}]'%d'[{CL_RESET}] messages in [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "已讀取 [{CL_WHITE}]%-5d[{CL_RESET}] 條資訊, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Drops has no Item value specified, skipping.\n"
@@ -1188,6 +1190,8 @@ Body:
   Translation: "已讀取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 組資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "已讀取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行資料, 源於 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
+  Translation: "正在載入 [{CL_WHITE}]%s[{CL_RESET}] 資料庫的疾風快取...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在載入地圖 (使用 %s 中的地圖快取)...\n"
 - Original: "Loading maps (using GRF files)...\n"
