--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -826,6 +826,8 @@ Body:
   Translation: "已读取 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%u[{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5u[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+- Original: "Done reading [{CL_WHITE}]%s[{CL_RESET}] from blast cache, took %[{PRIu64}] milliseconds...\n"
+  Translation: "已读取 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存 (耗时 %[{PRIu64}] 毫秒)...\n"
 - Original: "Done reading [{CL_WHITE}]'%d'[{CL_RESET}] messages in [{CL_WHITE}]'%s'[{CL_RESET}].\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 条信息, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Drops has no Item value specified, skipping.\n"
@@ -1188,6 +1190,8 @@ Body:
   Translation: "已读取 %-5[{PRIdPTR}]%6[{PRIdPTR}]\b\b\b\b\b\b 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
 - Original: "Loading [%[{PRIu64}]/%[{PRIu64}]] rows from '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
   Translation: "已读取 %-5[{PRIu64}]%6[{PRIu64}]\b\b\b\b\b\b 行数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\r"
+- Original: "Loading [{CL_WHITE}]%s[{CL_RESET}] from blast cache...[{CL_CLL}]\r"
+  Translation: "正在加载 [{CL_WHITE}]%s[{CL_RESET}] 数据库的疾风缓存...[{CL_CLL}]\r"
 - Original: "Loading maps (using %s as map cache)...\n"
   Translation: "正在加载地图 (使用 %s 中的地图缓存)...\n"
 - Original: "Loading maps (using GRF files)...\n"
