--- a/src/common/common-minicore.vcxproj
+++ b/src/common/common-minicore.vcxproj
@@ -39,6 +39,7 @@
     <ClInclude Include="performance.hpp" />
     <ClInclude Include="processmutex.hpp" />
     <ClInclude Include="random.hpp" />
+    <ClInclude Include="serialize.hpp" />
     <ClInclude Include="showmsg.hpp" />
     <ClInclude Include="strlib.hpp" />
     <ClInclude Include="translate.hpp" />
