--- a/src/common/common.vcxproj
+++ b/src/common/common.vcxproj
@@ -41,6 +41,7 @@
     <ClInclude Include="performance.hpp" />
     <ClInclude Include="processmutex.hpp" />
     <ClInclude Include="random.hpp" />
+    <ClInclude Include="serialize.hpp" />
     <ClInclude Include="showmsg.hpp" />
     <ClInclude Include="socket.hpp" />
     <ClInclude Include="sql.hpp" />
